fix visibility

--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -1,6 +1,6 @@
-a.footnote-ref {
-  color: $orange;
+@import "./color";
 
+a.footnote-ref {
   &:hover {
     color: $dark-red;
   }
